# MechSync

./: .gitignore  Cargo.toml  README.md  example.py  example.yml
configurations/: mechbass_drumbot.yml  mechbass_solo.yml  mechbass_with_synth.yml  pynode_example.yml
prototyping/: prototyping.rs
python_tools/: drumbot_mechsync_latency_test.py  helpers.py  requirements.txt
python_tools/mechbass/: calibrate_latency.py  composite_channel_0.csv
src/: data.rs  instruments.rs  main.rs  midi.rs  node.rs
src/config/: config.rs  factories.rs  graph.rs  mod.rs  types.rs
src/instruments/: drumbot.rs  mechbass.rs  mod.rs  python.rs
