[package]
name = "mechsync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.10.0"
may = "0.3.46"
serde_yml = "0.0.12"
serde = { version = "1.0.209", features = ["derive"] }
once_cell = "1.19.0"
clap = { version = "4.5.16", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"